[metadata]
name = bayes_dip
version = attr: bayes_dip.__version__

[options]
packages = find:
package_dir =
    =.
python_requires = >=3.7.0b1
install_requires =
    torch >= 1.12
    torchvision
    functorch
    tensorboardx
    scikit-image
    imageio
    opt_einsum
    tqdm
    gpytorch
    astra-toolbox >= 2.0.0
    odl >= 1.0.0.dev0

[options.packages.find]
where = .
include = bayes_dip*
